--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="style.css" />
     <title>Saturejka</title>
   </head>
+  <header>
+    <img src="logo.png" alt="Logo Saturejka" />
+  </header>
+
   <body>
     <h1>Naše nabídka</h1>
     <p>
