--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>Saturejka</title>
   </head>
   <header>
-    <img src="logo.png" alt="Logo Saturejka" />
+    <img src="img/logo.png" alt="Logo Saturejka" />
   </header>
-
   <body>
     <h1>Naše nabídka</h1>
     <p>
